# aski-core

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION.md  aski-ts-mode.el  flake.nix
core/: body.core  domain.core  expr.core  module.core  origin.core  param.core  pattern.core  primitive.aski  primitive.core  program.core  root.core  statement.core  trait.core  type.core
nix/: checks.nix
spec/: architecture.md  askid.md  compiler-outputs.md  data-trees.md  delimiter-budget.md  design.md  domainc.md  engine.md  generics-design.md  sema-core-design.md  sema-pipeline.md  syntax-v017.aski  syntax-v018.aski  syntax-v019.aski  syntax-v020.aski  synth.md
src/: lib.rs
tree-sitter-aski/: grammar.js
tree-sitter-aski/queries/: indents.scm
tree-sitter-aski/src/: grammar.json  node-types.json  parser.c
